--- a/prepros.config
+++ b/prepros.config
@@ -927,16 +927,19 @@
       {
         "file": "#source/js/script.js",
         "config": {
+          "autoCompile": true,
+          "customOutput": "js\\script.js",
           "tasks": {
             "babel": {
+              "enable": true
+            },
+            "bundle-js": {
               "enable": true
             },
             "minify-js": {
               "enable": false
             }
-          },
-          "customOutput": "js\\script.js",
-          "autoCompile": true
+          }
         }
       },
       {
@@ -954,6 +957,31 @@
           "sourceMap": false,
           "compileImported": false,
           "customOutput": "css/style.css"
+        }
+      },
+      {
+        "file": "css/style.css",
+        "config": {
+          "autoCompile": true
+        }
+      },
+      {
+        "file": "js/script.js",
+        "config": {
+          "tasks": {
+            "concat-js": {
+              "enable": true
+            },
+            "babel": {
+              "enable": true
+            },
+            "minify-js": {
+              "options": {
+                "toplevel": true
+              }
+            }
+          },
+          "autoCompile": true
         }
       }
     ]
