--- a/prepros.config
+++ b/prepros.config
@@ -919,17 +919,50 @@
     },
     "files": [
       {
+        "file": "#source/basket.kit",
+        "config": {
+          "customOutput": "basket.html"
+        }
+      },
+      {
+        "file": "#source/css/nullstyle.css",
+        "config": {
+          "tasks": {
+            "autoprefixer": {
+              "enable": false
+            },
+            "minify-css": {
+              "enable": false
+            }
+          }
+        }
+      },
+      {
         "file": "#source/index.kit",
         "config": {
           "customOutput": "index.html"
         }
       },
       {
+        "file": "#source/js/basket.js",
+        "config": {
+          "tasks": {
+            "minify-js": {
+              "enable": false
+            }
+          },
+          "customOutput": "js\\basket.js",
+          "autoCompile": true
+        }
+      },
+      {
         "file": "#source/js/script.js",
         "config": {
           "autoCompile": true,
-          "customOutput": "js\\script.js",
           "tasks": {
+            "concat-js": {
+              "enable": true
+            },
             "babel": {
               "enable": true
             },
@@ -937,16 +970,24 @@
               "enable": true
             },
             "minify-js": {
+              "options": {
+                "toplevel": true
+              },
               "enable": false
             }
-          }
+          },
+          "customOutput": "js\\script.js",
+          "sourceMap": true
         }
       },
       {
         "file": "#source/scss/nullstyle.scss",
         "config": {
-          "autoCompile": true,
-          "sourceMap": false,
+          "tasks": {
+            "minify-css": {
+              "enable": true
+            }
+          },
           "compileImported": true
         }
       },
