--- a/prepros.config
+++ b/prepros.config
@@ -981,14 +981,22 @@
         }
       },
       {
+        "file": "#source/js/swiper.min.js",
+        "config": {
+          "autoCompile": true,
+          "customOutput": "js\\swiper.min.js"
+        }
+      },
+      {
         "file": "#source/scss/nullstyle.scss",
         "config": {
+          "compileImported": true,
           "tasks": {
-            "minify-css": {
-              "enable": true
+            "autoprefixer": {
+              "enable": false
             }
           },
-          "compileImported": true
+          "autoCompile": false
         }
       },
       {
