--- a/prepros.config
+++ b/prepros.config
@@ -956,6 +956,18 @@
         }
       },
       {
+        "file": "#source/js/lazy-load.js",
+        "config": {
+          "tasks": {
+            "minify-js": {
+              "enable": false
+            }
+          },
+          "customOutput": "js\\lazy-load.js",
+          "autoCompile": true
+        }
+      },
+      {
         "file": "#source/js/script.js",
         "config": {
           "autoCompile": true,
